erDiagram
    clientes {
        INTEGER id_cliente "PK NOT_NULL"
        VARCHAR nombre "NOT_NULL"
        VARCHAR apellido "NOT_NULL"
        VARCHAR dni "UK NOT_NULL"
        DATETIME fecha_registro "NOT_NULL"
    }
    cuentas {
        INTEGER id_cuenta "PK NOT_NULL"
        VARCHAR nro_cuenta "UK NOT_NULL"
        INTEGER id_cliente "NOT_NULL"
        VARCHAR tipo_cuenta "NOT_NULL"
        FLOAT saldo "NOT_NULL"
        FLOAT tasa_interes "NOT_NULL"
        DATETIME fecha_creacion "NOT_NULL"
    }
    tarjetas {
        INTEGER id_tarjeta "PK NOT_NULL"
        VARCHAR numero_tarjeta "UK NOT_NULL"
        INTEGER id_cliente "NOT_NULL"
        FLOAT limite_credito "NOT_NULL"
        FLOAT saldo_actual "NOT_NULL"
        DATETIME fecha_emision "NOT_NULL"
    }
    movimientos_tarjeta {
        INTEGER id_movimiento "PK NOT_NULL"
        INTEGER id_tarjeta "NOT_NULL"
        VARCHAR tipo_movimiento "NOT_NULL"
        FLOAT monto "NOT_NULL"
        DATETIME fecha "NOT_NULL"
    }
    transacciones {
        INTEGER id_transaccion "PK NOT_NULL"
        INTEGER id_cuenta "NOT_NULL"
        VARCHAR tipo_transaccion "NOT_NULL"
        FLOAT monto "NOT_NULL"
        DATETIME fecha "NOT_NULL"
    }
    clientes ||--o{ cuentas : "id_cliente referencia id_cliente"
    clientes ||--o{ tarjetas : "id_cliente referencia id_cliente"
    tarjetas ||--o{ movimientos_tarjeta : "id_tarjeta referencia id_tarjeta"
    cuentas ||--o{ transacciones : "id_cuenta referencia id_cuenta"
